# rdotenv

./: .env  Cargo.toml  README.md  example_script
.github/workflows/: ci.yml  release-packaging.yaml
src/: main.rs  read_file.rs
