[package]
name = "rdotenv"
version = "0.1.0"
edition = "2021"

[dependencies]
exec = "0.3.1"

#
# Advice from https://github.com/johnthagen/min-sized-rust
#
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
